<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeteoActivity"
    android:orientation="vertical"
    android:id="@+id/layout_weather">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_weather_today"
        android:text="@string/weather_of_today"
        android:layout_margin="15px"/>

    <ImageView
        android:id="@+id/image_weather"
        android:layout_width="match_parent"
        android:layout_height="76dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_between_item"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_temp_max"
        android:text="@string/temperature_max"
        android:layout_margin="15px"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_between_item"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_temp_min"
        android:text="@string/temperature_min"
        android:layout_margin="15px"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_between_item"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_wind"
        android:text="@string/wind_speed"
        android:layout_margin="15px"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_between_item"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_humidity"
        android:text="@string/humidity"
        android:layout_margin="15px"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_between_item"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_previsibilite"
        android:text="@string/previsibilite"
        android:layout_margin="15px"/>
</LinearLayout>